--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "md5": "^2.3.0",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "randomstring": "^1.3.0",
     "util": "^0.12.5"
   }
